onClick jumpBack works via plasmaviewer

--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -1,16 +1,15 @@
-include_directories(${CMAKE_BINARY_DIR})
-include_directories(${CMAKE_SOURCE_DIR}/src)
+
+find_package(Qt5 CONFIG REQUIRED Core DBus)
 
 set(plasmoidplugin_SRCS
     plasmoidplugin.cpp
-    ../src/AJump.cpp
-    ${ajump_moc}
     )
 
 add_library(plasmoidplugin SHARED ${plasmoidplugin_SRCS})
 
 target_link_libraries(plasmoidplugin Qt5::Quick KF5::Plasma)
-
+target_link_libraries(plasmoidplugin
+    Qt5::DBus
+)
 install(TARGETS plasmoidplugin DESTINATION ${QML_INSTALL_DIR}/org/kde/private/activityjumper)
-
 install(FILES qmldir DESTINATION ${QML_INSTALL_DIR}/org/kde/private/activityjumper)
