icon change signal logic in plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(SOURCE_FILES
 
         src/error.hpp
         src/AJump.hpp
-        )
+        src/common.h)
 
 set(SOURCE_FILES ${SOURCE_FILES}
         src/error.cpp
