connected currentActivityChanged handler to desktopChanged slot (for the cases the desktop nr. remains the same on activity switch), qml cleanup

--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -1,12 +1,13 @@
-
-
+cmake_minimum_required(VERSION 3.5)
 
 find_package(Qt5 CONFIG REQUIRED Core DBus)
 find_package(KF5WindowSystem)
+find_package(KF5Activities)
 
 set(plasmoidplugin_SRCS
     plasmoidplugin.cpp
-        ../src/common.h)
+    ../src/common.h
+        )
 
 add_library(plasmoidplugin SHARED ${plasmoidplugin_SRCS})
 
@@ -14,6 +15,7 @@ target_link_libraries(plasmoidplugin
         Qt5::Quick
         KF5::Plasma
         KF5::WindowSystem
+        KF5::Activities
         )
 
 target_link_libraries(plasmoidplugin
